feat: sell signed official US CPI data
